Bug 255116: Pressing Home or Shift+Home should close the autocomplete dropdown, patch by Jesse Ruderman <jruderman@gmail.com>, r+a=mconnor